--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "require": {
         "ext-filter": "*",
         "ext-spl": "*",
-        "fkooman/http": "^1.1.0",
+        "fkooman/http": "^1.3.0",
         "fkooman/rest": "^1.0.1",
-        "fkooman/rest-plugin-authentication": "dev-develop",
+        "fkooman/rest-plugin-authentication": "^2.0.0",
         "fkooman/tpl": "^2.0.0",
         "ircmaxell/password-compat": "~1.0",
         "php": ">=5.4"
